--- a/paywall/package.json
+++ b/paywall/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint .",
     "reformat": "prettier-eslint \"src/**/*.js\" --write",
     "fail-pending-changes": "../scripts/pending-changes.sh",
+    "svg-2-components": "./node_modules/@svgr/cli/bin/svgr --title-prop --no-dimensions --template src/components/interface/svg/template.js --no-dimensions -d src/components/interface/svg/ src/static/images/svg/",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "storybook": "start-storybook -p 9002 -c .storybook -s .",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes"
@@ -65,6 +66,10 @@
     "web3-eth-abi": "1.0.0-beta.37",
     "web3-utils": "1.0.0-beta.37"
   },
+  "devDependencies": {
+    "@svgr/cli": "^4.1.0",
+    "nodemon": "^1.18.10"
+  },
   "lint-staged": {
     "linters": {
       "*.js": [
@@ -87,9 +92,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "nodemon": "^1.18.10"
-  },
   "engines": {
     "node": "=8.11.4"
   },
