--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-redux": "^7.0.3",
+    "@types/storybook__react": "^4.0.1",
     "@zeit/next-source-maps": "0.0.3",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
@@ -23,12 +24,13 @@
     "connected-next-router": "^1.0.1",
     "cross-env": "^5.2.0",
     "ethereumjs-util": "^6.0.0",
+    "fork-ts-checker-webpack-plugin": "^1.0.0",
     "history": "^4.7.2",
     "isomorphic-unfetch": "^3.0.0",
     "jest-dom": "^3.1.0",
+    "jest-fetch-mock": "^2.1.1",
     "jest-mock-axios": "^2.1.11",
     "jest-styled-components": "^6.3.1",
-    "jest-fetch-mock": "^2.1.1",
     "jsonwebtoken": "^8.4.0",
     "next": "^8.0.3",
     "nock": "^10.0.5",
