--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "predev": "NODE_ENV=development sequelize db:migrate",
-    "dev": "nodemon server.js",
+    "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit",
     "lint": "eslint .",
@@ -14,7 +14,8 @@
     "db:migrate": "sequelize db:migrate",
     "fail-pending-changes": "../scripts/pending-changes.sh",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
-    "build": "echo 'Nothing to build'"
+    "build": "tsc",
+    "tsc": "tsc"
   },
   "lint-staged": {
     "linters": {
@@ -37,22 +38,25 @@
     "ethers": "^4.0.26",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "jsontokens": "^1.0.0",
     "lodash.isequal": "^4.5.0",
+    "nock": "~10.0.6",
     "node-mocks-http": "^1.7.3",
     "pg": "^7.7.1",
     "sequelize": "^4.41.2",
     "sequelize-cli": "^5.4.0",
     "supertest": "^3.3.0",
+    "ts-jest": "^24.0.0",
+    "typescript": "^3.3.3333",
     "web3": "^1.0.0-beta.37",
-    "winston": "^3.1.0",
-    "nock": "~10.0.6"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.8",
     "sqlite3": "^4.0.6",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "tsc-watch": "^2.1.2"
   },
   "jest": {
     "testMatch": [
