--- a/paywall/package.json
+++ b/paywall/package.json
@@ -9,7 +9,7 @@
     "build": "npm run before && next build src",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
-    "start": "npm run before && next start",
+    "start": "cross-env NODE_ENV=production node src/server.js",
     "test": "cross-env UNLOCK_ENV=test jest --env=jsdom",
     "lint": "eslint .",
     "reformat": "prettier-eslint \"src/**/*.js\" --write",
