--- a/paywall/package.json
+++ b/paywall/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env NODE_ENV=production node src/server.js",
     "test": "cross-env UNLOCK_ENV=test jest --env=jsdom",
     "lint": "eslint .",
-    "reformat": "prettier-eslint \"src/components/lock/UnlockFlag.js\" --write --log-level trace",
+    "reformat": "prettier-eslint \"src/components/lock/UnlockFlag.js\" --write --parser babel",
     "fail-pending-changes": "../scripts/pending-changes.sh",
     "svg-2-components": "./node_modules/@svgr/cli/bin/svgr --title-prop --no-dimensions --template src/components/interface/svg/template.js --no-dimensions -d src/components/interface/svg/ src/static/images/svg/",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
