--- a/wedlocks/package.json
+++ b/wedlocks/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-env": "^7.3.4",
     "aws-sdk": "^2.423.0",
     "babel-loader": "^8.0.5",
+    "netlify-cli": "^2.8.3",
     "nodemon": "^1.18.10",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
