--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -23,6 +23,7 @@
     "color-scheme": "^1.0.1",
     "connected-next-router": "^1.0.1",
     "cross-env": "^5.2.0",
+    "email-validator": "^2.0.4",
     "ethereumjs-util": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "history": "^4.7.2",
