--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -11,6 +11,7 @@
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
     "@types/jest": "^24.0.11",
+    "@types/next": "^8.0.3",
     "@types/react": "^16.8.8",
     "@types/react-redux": "^7.0.3",
     "@types/storybook__react": "^4.0.1",
