--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -11,9 +11,11 @@
     "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
     "@types/jest": "^24.0.11",
+    "@types/next": "^8.0.3",
     "@types/react": "^16.8.8",
     "@types/react-redux": "^7.0.3",
     "@types/storybook__react": "^4.0.1",
+    "@types/styled-components": "^4.1.12",
     "@zeit/next-source-maps": "0.0.3",
     "@zeit/next-typescript": "^1.1.1",
     "axios": "^0.18.0",
