--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -22,6 +22,7 @@
     "solium": "^1.2.3",
     "truffle": "^5.0.7",
     "truffle-hdwallet-provider": "^1.0.5",
+    "truffle-security": "^1.3.1",
     "unlock-abi-0": "^1.0.1",
     "web3-eth-abi": "^1.0.0-beta.47",
     "web3-utils": "^1.0.0-beta.37",
@@ -39,7 +40,8 @@
     "ci": "npm run lint && npm run test && npm run reports",
     "build": "truffle compile --all",
     "zos": "zos",
-    "reports": "truffle test ./reports/gas.js"
+    "reports": "truffle test ./reports/gas.js",
+    "verify": "truffle run verify"
   },
   "author": "",
   "license": "ISC"
