--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,6 +171,8 @@ jobs:
       - run:
           name: Integration Tests
           command: scripts/integration-tests.sh
+      - store_artifacts:
+          path: /tmp/screenshots
 
   deploy-unlock-app-netlify:
     machine: true
