--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -4,6 +4,8 @@
   "description": "an unlock storage service",
   "main": "server.js",
   "scripts": {
+    "prestart": "npm run build",
+    "start" : "node ./build/server.js",
     "predev": "NODE_ENV=development npm run db:migrate",
     "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
