--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -53,6 +53,7 @@
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-terser": "^4.0.4",
+    "rss": "^1.2.2",
     "run-script-os": "^1.0.5",
     "storybook-chromatic": "^1.3.0",
     "storybook-react-router": "^1.0.2",
