Adding additional typescript supporting changes to Locksmith (#2263)
* Adding additional typescript supporting changes to Locksmith

* update to start to build and start build version of application
* supporting lint changes from unlock-app
* docker-compose update for integration testing

* Removing explict buiild as this is now a prestart step

--- a/docker/docker-compose.ci.yml
+++ b/docker/docker-compose.ci.yml
@@ -84,7 +84,7 @@ services:
     image: unlock
     user: node
     working_dir: /home/unlock/locksmith
-    command: sh -c './scripts/wait-for.sh db:5432 -- npm run db:migrate && npm run start'
+    command: sh -c './scripts/wait-for.sh db:5432 -- npm run db:migrate && npm start'
     expose:
       - 8080
     depends_on:
