--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -17,7 +17,8 @@
     "fail-pending-changes": "../scripts/pending-changes.sh",
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
     "build": "tsc",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "dist" : "sh ./scripts/dist.sh"
   },
   "lint-staged": {
     "linters": {
