Update lint-staged rules and update file formatting

--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -106,7 +106,7 @@
   },
   "lint-staged": {
     "linters": {
-      "*.js": [
+      "*.{js,ts,tsx}": [
         "prettier-eslint --write",
         "git add"
       ]
