--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "prestart": "npm run build",
-    "start" : "node ./build/server.js",
+    "start": "node ./build/server.js",
     "predev": "NODE_ENV=development npm run db:migrate",
     "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
@@ -18,7 +18,7 @@
     "ci": "npm run lint && npm test && npm run reformat && npm run fail-pending-changes",
     "build": "tsc",
     "tsc": "tsc",
-    "dist" : "sh ./scripts/dist.sh"
+    "dist": "sh ./scripts/dist.sh"
   },
   "lint-staged": {
     "linters": {
@@ -32,7 +32,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -48,12 +50,11 @@
     "nock": "~10.0.6",
     "node-mocks-http": "^1.7.3",
     "pg": "^7.7.1",
+    "random-words": "^1.1.0",
     "sequelize": "^4.41.2",
     "sequelize-cli": "^5.4.0",
     "supertest": "^3.3.0",
     "ts-jest": "^24.0.0",
-    "@types/express": "^4.16.1",
-    "@types/node": "^11.11.3",
     "typescript": "^3.3.3333",
     "web3": "^1.0.0-beta.37",
     "winston": "^3.1.0"
