Updating Locksmith Deployment
* fixes bug in Locksmith deployment of archive having nested directory
* Moves more details into Locksmith's scripts
* wrapping library now acts as a location override

--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -15,6 +15,7 @@
     "ci": "npm run lint && npm test",
     "build": "tsc",
     "tsc": "tsc",
+    "predist": "npm run build",
     "dist": "sh ./scripts/dist.sh"
   },
   "lint-staged": {
