--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.1.0",
     "link-parent-bin": "^1.0.0",
+    "lint-staged": "^8.1.5",
     "netlify-cli": "^2.6.0",
     "prettier": "^1.16.4",
     "typescript": "^3.3.3333"
