--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -80,11 +80,10 @@
   },
   "engineStrict": true,
   "scripts": {
-    "predev": "npm run start-ganache && npm run build-paywall && npm run build-blog && npm run deploy-unlock-contract",
+    "predev": "npm run start-ganache && npm run build-blog && npm run deploy-unlock-contract",
     "dev": "nodemon src/server.js",
-    "build": "npm run build-paywall && next build src",
+    "build": "next build src",
     "build-blog": "node scripts/build-blog.js",
-    "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js -o ./src/static/paywall.min.js",
     "deploy": "next export src -o out",
     "deploy-netlify": "./scripts/deploy-netlify.sh",
     "deploy-unlock-contract": "node scripts/deploy-unlock.js",
