--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -8,7 +8,6 @@
     "@storybook/addon-knobs": "^4.1.13",
     "@storybook/addon-storyshots": "^4.1.13",
     "@storybook/addon-viewport": "^4.1.13",
-    "@storybook/addons": "^4.1.13",
     "@storybook/react": "4.1.13",
     "@types/jest": "^24.0.11",
     "@types/next": "^8.0.3",
@@ -27,9 +26,7 @@
     "connected-next-router": "^1.0.1",
     "cross-env": "^5.2.0",
     "email-validator": "^2.0.4",
-    "ethereumjs-util": "^6.0.0",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
-    "history": "^4.7.2",
     "isomorphic-unfetch": "^3.0.0",
     "jest-dom": "^3.1.0",
     "jest-fetch-mock": "^2.1.1",
@@ -45,21 +42,14 @@
     "react-dom": "^16.8.3",
     "react-jazzicon": "^0.1.2",
     "react-redux": "^6.0.1",
-    "react-router-dom": "^4.2.2",
-    "react-router-redux": "^5.0.0-alpha.9",
     "react-showdown": "^1.6.0",
     "react-test-renderer": "16.8.3",
     "react-testing-library": "^6.0.0",
     "redux": "^4.0.1",
-    "rollup": "^1.6.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-terser": "^4.0.4",
     "rss": "^1.2.2",
     "run-script-os": "^1.0.5",
     "storybook-chromatic": "^1.3.0",
-    "storybook-react-router": "^1.0.2",
     "styled-components": "^4.1.3",
-    "terser": "^3.16.1",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.3333",
     "unlock-abi-0": "^1.0.1",
@@ -71,9 +61,7 @@
     "@svgr/cli": "^4.1.0",
     "depcheck": "^0.7.1",
     "nodemon": "^1.18.9",
-    "npm-check": "^5.9.0",
-    "react-router-test-context": "^0.1.0",
-    "web3-eth-abi": "1.0.0-beta.37"
+    "npm-check": "^5.9.0"
   },
   "engines": {
     "node": "=8.11.4"
