--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -29,7 +29,6 @@
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "jest-dom": "^3.1.0",
-    "jest-fetch-mock": "^2.1.1",
     "jest-mock-axios": "^2.1.11",
     "jest-styled-components": "^6.3.1",
     "jsonwebtoken": "^8.4.0",
@@ -42,7 +41,8 @@
     "react-dom": "^16.8.3",
     "react-jazzicon": "^0.1.2",
     "react-redux": "^6.0.1",
-    "react-showdown": "^1.6.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-test-renderer": "16.8.3",
     "react-testing-library": "^6.0.0",
     "redux": "^4.0.1",
@@ -54,8 +54,7 @@
     "typescript": "^3.3.3333",
     "unlock-abi-0": "^1.0.1",
     "web3": "1.0.0-beta.37",
-    "web3-utils": "1.0.0-beta.37",
-    "yaml-front-matter": "^4.0.0"
+    "web3-utils": "1.0.0-beta.37"
   },
   "devDependencies": {
     "@svgr/cli": "^4.1.0",
