--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -88,7 +88,8 @@
   "lint-staged": {
     "linters": {
       "*.{js,ts,tsx}": [
-        "eslint"
+        "eslint --fix",
+        "git add"
       ]
     }
   },
