--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -10,7 +10,7 @@
     "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit",
-    "lint": "eslint .",
+    "lint": "eslint --ext .ts,.js,.tsx src/",
     "db:migrate": "sequelize db:migrate",
     "ci": "npm run lint && npm test",
     "build": "tsc",
@@ -21,7 +21,8 @@
   "lint-staged": {
     "linters": {
       "*.{js,ts,tsx}": [
-        "eslint"
+        "eslint --fix",
+        "git add"
       ]
     }
   },
