--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -29,11 +29,12 @@
   "author": "Unlock Inc",
   "license": "ISC",
   "dependencies": {
+    "@types/eth-sig-util": "^2.1.0",
+    "@types/ethereumjs-util": "^5.2.0",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
-    "@types/eth-sig-util": "^2.1.0",
-    "@types/ethereumjs-util": "^5.2.0",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
