--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -32,6 +32,7 @@
     "@types/eth-sig-util": "^2.1.0",
     "@types/ethereumjs-util": "^5.2.0",
     "@types/express": "^4.16.1",
+    "@types/express-serve-static-core": "^4.16.2",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
