--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -36,6 +36,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^11.11.3",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@types/sequelize": "^4.27.44",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
