--- a/unlock-app/package.json
+++ b/unlock-app/package.json
@@ -36,13 +36,13 @@
     "nock": "^10.0.5",
     "path-match": "^1.2.4",
     "prop-types": "^15.6.1",
-    "react": "^16.8.3",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.3",
+    "react-dom": "^16.8.6",
     "react-jazzicon": "^0.1.2",
     "react-redux": "^6.0.1",
-    "react-test-renderer": "16.8.3",
-    "react-testing-library": "^6.0.0",
+    "react-test-renderer": "^16.8.3",
+    "react-testing-library": "^6.0.3",
     "redux": "^4.0.1",
     "rss": "^1.2.2",
     "run-script-os": "^1.0.5",
