--- a/unlock-protocol.com/package.json
+++ b/unlock-protocol.com/package.json
@@ -29,11 +29,11 @@
     "path-match": "^1.2.4",
     "prop-types": "^15.6.1",
     "raw-loader": "^2.0.0",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-showdown": "^1.6.0",
-    "react-test-renderer": "16.8.3",
-    "react-testing-library": "^6.0.0",
+    "react-test-renderer": "^16.8.3",
+    "react-testing-library": "^6.0.3",
     "rss": "^1.2.2",
     "run-script-os": "^1.0.5",
     "storybook-chromatic": "^1.3.0",
