--- a/paywall/package.json
+++ b/paywall/package.json
@@ -11,7 +11,7 @@
     "deploy-netlify": "./scripts/deploy-netlify.sh",
     "start": "cross-env NODE_ENV=production node src/server.js",
     "test": "cross-env UNLOCK_ENV=test jest --env=jsdom",
-    "lint": "eslint .",
+    "lint": "eslint --ext .tsx,.ts,.js src/",
     "svg-2-components": "./node_modules/@svgr/cli/bin/svgr --title-prop --no-dimensions --template src/components/interface/svg/template.js --no-dimensions -d src/components/interface/svg/ src/static/images/svg/",
     "build-paywall": "cross-env NODE_ENV=production rollup -c rollup.paywall.config.js",
     "storybook": "start-storybook -p 9002 -c .storybook -s .",
