Updated Locksmith deployment to utilize Docker
* Adds Dockerfile
* Removes migration file from previous paradigm
* Base script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,14 +271,19 @@ jobs:
     steps:
       - *cached-checkout
       - run:
-          name: Set GIT_COMMIT_DESC
-          command: echo 'export GIT_COMMIT_DESC=$(git log --format=%B -n 1 "$CIRCLE_SHA1")' >> $BASH_ENV
-      - run:
           name: Set IS_FORKED_PR
-          command: ./scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
+          command: scripts/circleci/set-is-forked-pull-request.sh >> $BASH_ENV
+      - run:
+          name: Installing deployment dependencies
+          working_directory: /
+          command: |
+            sudo apt-get -y -qq update
+            sudo apt-get install python-pip python-dev build-essential
+            sudo pip install --upgrade setuptools
+            sudo pip install awsebcli --upgrade
       - run:
           name: Deploy to to Beanstalk
-          command: locksmith/scripts/deploy-elasticbeanstalk.sh "$CIRCLE_SHA1" "$CIRCLE_BRANCH" "$IS_FORKED_PR" "$GIT_COMMIT_DESC"
+          command: locksmith/scripts/deploy-eb-docker.sh "$APPLICATION" "$ENVIRONMENT" "$DB_USERNAME" "$DB_PASSWORD" "$DB_NAME" "$DB_HOSTNAME" "$NODE_ENV" "$IS_FORKED_PR"
 
   promote-unlock-image:
     machine: true
@@ -394,7 +399,7 @@ workflows:
       - deploy-locksmith-beanstalk:
           filters:
             branches:
-              only: master
+              only: master        
           requires:
             - unlock-protocol-com-tests
             - unlock-app-tests
