--- a/locksmith/.gitignore
+++ b/locksmith/.gitignore
@@ -6,3 +6,8 @@ development.sqlite3
 
 # typescript build artifacts
 /build
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
