--- a/unlock-protocol.com/package.json
+++ b/unlock-protocol.com/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-require-context-hook": "^1.0.0",
     "babel-plugin-styled-components": "1.10.0",
     "cross-env": "^5.2.0",
+    "eslint-plugin-react": "^7.12.4",
     "fork-ts-checker-webpack-plugin": "^1.0.0",
     "isomorphic-unfetch": "^3.0.0",
     "jest-dom": "^3.1.0",
