--- a/locksmith/package.json
+++ b/locksmith/package.json
@@ -10,7 +10,7 @@
     "dev": "tsc-watch --onSuccess 'node build/server.js' --onFailure 'echo Beep! Compilation Failed'",
     "pretest": "NODE_ENV=test sequelize db:migrate",
     "test": "jest --forceExit",
-    "lint": "eslint --ext .ts,.js,.tsx src/",
+    "lint": "eslint --ext .ts,.js src/",
     "db:migrate": "sequelize db:migrate",
     "ci": "npm run lint && npm test",
     "build": "tsc",
@@ -20,7 +20,7 @@
   },
   "lint-staged": {
     "linters": {
-      "*.{js,ts,tsx}": [
+      "*.{js,ts}": [
         "eslint --fix",
         "git add"
       ]
