--- a/paywall/package.json
+++ b/paywall/package.json
@@ -77,7 +77,8 @@
   "lint-staged": {
     "linters": {
       "*.{js,ts,tsx}": [
-        "eslint"
+        "eslint --fix",
+        "git add"
       ]
     }
   },
