removed the custom eslint packages installed by tests and unlock-js

--- a/unlock-js/package.json
+++ b/unlock-js/package.json
@@ -24,7 +24,6 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.4.2",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.15.3"
+    "babel-jest": "^23.6.0"
   }
 }
