new configuration for handling css-based responsiveness and animation

--- a/paywall/package.json
+++ b/paywall/package.json
@@ -29,12 +29,14 @@
     "@types/react": "^16.8.2",
     "@types/react-dom": "^16.8.0",
     "@unlock-protocol/unlock-js": "0.0.4",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "0.0.3",
     "axios": "^0.18.0",
     "babel-plugin-require-context-hook": "^1.0.0",
     "connected-react-router": "^6.3.0",
     "copyfiles": "^2.1.0",
     "cross-env": "^5.2.0",
+    "cssnano": "^4.1.10",
     "ethereumjs-util": "^6.0.0",
     "history": "^4.7.2",
     "jest-dom": "^3.1.0",
@@ -44,6 +46,8 @@
     "next": "^8.0.3",
     "nock": "^10.0.6",
     "path-match": "^1.2.4",
+    "postcss-nested": "^4.1.2",
+    "postcss-simple-vars": "^5.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -55,6 +59,7 @@
     "redux": "^4.0.1",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-terser": "^4.0.4",
     "run-script-os": "^1.0.5",
     "storybook-react-router": "^1.0.2",
